--- a/output/index.html
+++ b/output/index.html
@@ -48,8 +48,6 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/projects">Projects</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/about">About</a></li>
           </ul>
         </nav>
       </header>
@@ -63,14 +61,15 @@
           <span id="intro-description">That's Jorge like forge or gorge.</span>
           <div style="max-width: 860px">
           <span id="intro-description">I'm a maker culture expert from <a <a class="w3-hover-text-grey" style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
-          <span id="intro-description">I make, break, and fix things– teaching along the way.</span>
+          <br>
+          <span id="intro-description">I make, break, and fix things to learn– teaching and consulting on tech along the way.</span>
           <br><br>
           <span id="intro-description">To best reach me, shoot me an <a class="w3-hover-text-grey" style="color: #673ab7" href="mailto:jorge@jorgegarcia.io">email</a></span>
           <span id="intro-description">or send me a text.</span>
         </div>
         </div>
         <div style="line-height: 180px;">
-          <a href="" target="_blank"><img class="avatar" alt="Avatar" src="" onerror="this.src='theme/images/avatar.png'"></a>
+          <a href="" target="_blank"><img class="avatar" alt="Avatar" src="" onerror="this.src='theme/images/selfie.jpg'"></a>
         </div>
         
       </aside>
