--- a/output/mining-into-twenty18.html
+++ b/output/mining-into-twenty18.html
@@ -50,8 +50,6 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/projects">Projects</a></li>
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="/pages/about">About</a></li>
           </ul>
         </nav>
       </header>
@@ -108,7 +106,7 @@
                 <div style="margin-left: 20px; margin-top: 15px;">
                   <a href=""><span id="author-name" class="w3-hover-text-dark-grey">Jorge Garcia</span></a>
                   <p id="author-story">I'm a maker culture expert from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
-                    <span id="intro-description">I make, break, and fix things– teaching along the way.</p>
+                    <span id="intro-description">I make, break, and fix things to learn– teaching and consulting on tech along the way.</p>
                 </div>
               </div>
             </div>
