--- a/output/jottings-from-the-gathering-scratch-2018.html
+++ b/output/jottings-from-the-gathering-scratch-2018.html
@@ -19,29 +19,31 @@
     <meta property="og:title" content="Jottings from the Gathering - Scratch 2018"/>
     <meta property="og:description" content="Late July 2018, I got a chance to travel to Boston/Cambridge to attend the Scratch Conference. This is my second time attending the conference, the last time I visited, I had no experience with Scratch and was unaware of its community. In that first visit, my goal was to learn about the tool and how I could bring back what I learned to help the circulation of Finch Robots through the Chicago Public Library. Since then I have used Scratch to teach adults, teens, and children alike – the basics of programming and I usually include the Finch in those workshops. In almost every outreach activity I do with the library, the Finch robots are there with me. I have three main ways I like to showcase using the Finch; controlling the Finch, reading data from the Finch, and using the Finch as an input device. In usual fashion, I brought the Finch along with me to Scratch Conference 2018 to have some fun during my off time. I instead found a new gadget that has absorbed me since I arrived at the airport to return to Chicago, the BBC micro:bit. Along with the new bot, I made new friends and connections that will propel my purpose in using Scratch for years to come."/>
     <meta property="og:site_name" content="jorgegarcia.io" />
-    <meta property="og:url" content="/jottings-from-the-gathering-scratch-2018.html"/>
+    <meta property="og:url" content="https://jorgegarcia.io/jottings-from-the-gathering-scratch-2018.html"/>
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Jottings from the Gathering - Scratch 2018">
     <meta name="twitter:description" content="Late July 2018, I got a chance to travel to Boston/Cambridge to attend the Scratch Conference. This is my second time attending the conference, the last time I visited, I had no experience with Scratch and was unaware of its community. In that first visit, my goal was to learn about the tool and how I could bring back what I learned to help the circulation of Finch Robots through the Chicago Public Library. Since then I have used Scratch to teach adults, teens, and children alike – the basics of programming and I usually include the Finch in those workshops. In almost every outreach activity I do with the library, the Finch robots are there with me. I have three main ways I like to showcase using the Finch; controlling the Finch, reading data from the Finch, and using the Finch as an input device. In usual fashion, I brought the Finch along with me to Scratch Conference 2018 to have some fun during my off time. I instead found a new gadget that has absorbed me since I arrived at the airport to return to Chicago, the BBC micro:bit. Along with the new bot, I made new friends and connections that will propel my purpose in using Scratch for years to come.">
-    <meta name="twitter:url" content="/jottings-from-the-gathering-scratch-2018.html">
+    <meta name="twitter:url" content="https://jorgegarcia.io/jottings-from-the-gathering-scratch-2018.html">
 
     <!-- Feed -->
+    <link rel="alternate" type="application/atom+xml" href="https://jorgegarcia.io/feeds/all.atom.xml" title="jorgegarcia.io Atom Feed" />
+    <link rel="alternate" type="application/atom+xml" href="https://jorgegarcia.io/feeds/{slug}.atom.xml" title="jorgegarcia.io Categories Atom Feed" />
 
     <!-- CSS --> 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:regular,bold">
-    <link rel="stylesheet" type="text/css" href="/theme/css/w3.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/jqcloud.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/pygments-highlight-github.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/w3.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/jqcloud.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/pygments-highlight-github.css">
 
     <!-- Ic0n -->
-    <link rel="shortcut icon" type="image/x-icon" href="/theme/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://jorgegarcia.io/theme/images/favicon.png">
 
     <!-- JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="/theme/js/jqcloud.min.js"></script>
+    <script src="https://jorgegarcia.io/theme/js/jqcloud.min.js"></script>
   </head>
 
   <body>
@@ -50,6 +52,7 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green" style="font-weight: bold;"><a href="https://jorgegarcia.io/category/blog.html">Blog</a></li>
           </ul>
         </nav>
       </header>
@@ -68,10 +71,10 @@
           </div>
           <div>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/notes.html" title="All articles with Notes tag">#notes</a>
+              <a href="https://jorgegarcia.io/tag/notes.html" title="All articles with Notes tag">#notes</a>
             </span>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/scratch.html" title="All articles with Scratch tag">#scratch</a>
+              <a href="https://jorgegarcia.io/tag/scratch.html" title="All articles with Scratch tag">#scratch</a>
             </span>
           </div>
         </div>
@@ -107,7 +110,7 @@
                 <a href=""><img style="width: 60px; height: 60px;" src="" onerror="this.src='theme/images/avatar.png'" alt="Avatar"></a>
                 <div style="margin-left: 20px; margin-top: 15px;">
                   <a href=""><span id="author-name" class="w3-hover-text-dark-grey">Jorge Garcia</span></a>
-                  <p id="author-story">I'm a maker culture expert from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
+                  <p id="author-story">I'm a maker culture professional and instructional designer from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
                     <span id="intro-description">I make, break, and fix things to learn– teaching and consulting on tech along the way.</p>
                 </div>
               </div>
@@ -118,13 +121,13 @@
 
           <p style="font-size:10pt; font-style: italic;">Did you like this article? Share it with your friends!</p>
           <div id="share" class="share">
-            <a href="http://www.facebook.com/sharer.php?u=/jottings-from-the-gathering-scratch-2018.html&amp;t=jorgegarcia.io%3A%20Jottings%20from%20the%20Gathering%20-%20Scratch%202018" target="_blank" class="w3-btn w3-indigo">
+            <a href="http://www.facebook.com/sharer.php?u=https%3A//jorgegarcia.io/jottings-from-the-gathering-scratch-2018.html&amp;t=jorgegarcia.io%3A%20Jottings%20from%20the%20Gathering%20-%20Scratch%202018" target="_blank" class="w3-btn w3-indigo">
               <i class="fa fa-facebook"></i> <span>Facebook</span>
             </a>
-            <a href="http://twitter.com/share?url=/jottings-from-the-gathering-scratch-2018.html&amp;text=jorgegarcia.io%3A%20Jottings%20from%20the%20Gathering%20-%20Scratch%202018" target="_blank" class="w3-btn w3-blue">
+            <a href="http://twitter.com/share?url=https%3A//jorgegarcia.io/jottings-from-the-gathering-scratch-2018.html&amp;text=jorgegarcia.io%3A%20Jottings%20from%20the%20Gathering%20-%20Scratch%202018" target="_blank" class="w3-btn w3-blue">
               <i class="fa fa-twitter"></i> <span>Twitter</span>
             </a>
-            <a href="https://plus.google.com/share?url=/jottings-from-the-gathering-scratch-2018.html" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="w3-btn w3-red">
+            <a href="https://plus.google.com/share?url=https%3A//jorgegarcia.io/jottings-from-the-gathering-scratch-2018.html" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="w3-btn w3-red">
               <i class="fa fa-google-plus"></i> <span>Google</span>
             </a>
           </div>
