--- a/output/saving-the-planet-a-stroll-with-the-boys.html
+++ b/output/saving-the-planet-a-stroll-with-the-boys.html
@@ -19,29 +19,31 @@
     <meta property="og:title" content="Saving the Planet: A stroll with the boys"/>
     <meta property="og:description" content="Julian wants to pick up trash at the park and make an art project with the gatherings. Not sure how he came to the idea but he’s been passionate about it for a few days. But first…"/>
     <meta property="og:site_name" content="jorgegarcia.io" />
-    <meta property="og:url" content="/saving-the-planet-a-stroll-with-the-boys.html"/>
+    <meta property="og:url" content="https://jorgegarcia.io/saving-the-planet-a-stroll-with-the-boys.html"/>
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Saving the Planet: A stroll with the boys">
     <meta name="twitter:description" content="Julian wants to pick up trash at the park and make an art project with the gatherings. Not sure how he came to the idea but he’s been passionate about it for a few days. But first…">
-    <meta name="twitter:url" content="/saving-the-planet-a-stroll-with-the-boys.html">
+    <meta name="twitter:url" content="https://jorgegarcia.io/saving-the-planet-a-stroll-with-the-boys.html">
 
     <!-- Feed -->
+    <link rel="alternate" type="application/atom+xml" href="https://jorgegarcia.io/feeds/all.atom.xml" title="jorgegarcia.io Atom Feed" />
+    <link rel="alternate" type="application/atom+xml" href="https://jorgegarcia.io/feeds/{slug}.atom.xml" title="jorgegarcia.io Categories Atom Feed" />
 
     <!-- CSS --> 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:regular,bold">
-    <link rel="stylesheet" type="text/css" href="/theme/css/w3.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/jqcloud.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/pygments-highlight-github.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/w3.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/jqcloud.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/pygments-highlight-github.css">
 
     <!-- Ic0n -->
-    <link rel="shortcut icon" type="image/x-icon" href="/theme/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://jorgegarcia.io/theme/images/favicon.png">
 
     <!-- JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="/theme/js/jqcloud.min.js"></script>
+    <script src="https://jorgegarcia.io/theme/js/jqcloud.min.js"></script>
   </head>
 
   <body>
@@ -50,6 +52,7 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green" style="font-weight: bold;"><a href="https://jorgegarcia.io/category/blog.html">Blog</a></li>
           </ul>
         </nav>
       </header>
@@ -68,10 +71,10 @@
           </div>
           <div>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/community.html" title="All articles with Community tag">#community</a>
+              <a href="https://jorgegarcia.io/tag/community.html" title="All articles with Community tag">#community</a>
             </span>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/sons.html" title="All articles with Sons tag">#sons</a>
+              <a href="https://jorgegarcia.io/tag/sons.html" title="All articles with Sons tag">#sons</a>
             </span>
           </div>
         </div>
@@ -89,11 +92,11 @@
 <p>Here is how that went on Sunday 8/4/19</p>
 <p>But first…</p>
 <p>…Coffee. A 16oz Cold Brew, two Tall iced-waters, and a warmed up scone to share.</p>
-<p><img alt="" src="/images/stroller_at_starbucks.jpg">
+<p><img alt="Double Stroller" src="https://jorgegarcia.io/images/stroller_at_starbucks.jpg">
 <span class="caption">We took the double stroller, hasn't been used since we moved to Schorsch or whatever you call this place.<span></p>
-<p><img alt="" src="/images/julians_first_bag.jpg">
+<p><img alt="First Bag" src="https://jorgegarcia.io/images/julians_first_bag.jpg">
 <span class="caption">First full bag!</span></p>
-<p><img alt="" src="/images/smile_android.png">
+<p><img alt="Chase" src="https://jorgegarcia.io/images/jpegchasingleonidas.gif">
 <span class="caption">
 A time for play. Big brother has to go retrieve the more exploratory little brother.</span>
 Original Date – 8-4-2019</p>
@@ -108,7 +111,7 @@ Original Date – 8-4-2019</p>
                 <a href=""><img style="width: 60px; height: 60px;" src="" onerror="this.src='theme/images/avatar.png'" alt="Avatar"></a>
                 <div style="margin-left: 20px; margin-top: 15px;">
                   <a href=""><span id="author-name" class="w3-hover-text-dark-grey">Jorge Garcia</span></a>
-                  <p id="author-story">I'm a maker culture expert from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
+                  <p id="author-story">I'm a maker culture professional and instructional designer from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
                     <span id="intro-description">I make, break, and fix things to learn– teaching and consulting on tech along the way.</p>
                 </div>
               </div>
@@ -119,13 +122,13 @@ Original Date – 8-4-2019</p>
 
           <p style="font-size:10pt; font-style: italic;">Did you like this article? Share it with your friends!</p>
           <div id="share" class="share">
-            <a href="http://www.facebook.com/sharer.php?u=/saving-the-planet-a-stroll-with-the-boys.html&amp;t=jorgegarcia.io%3A%20Saving%20the%20Planet%3A%20A%20stroll%20with%20the%20boys" target="_blank" class="w3-btn w3-indigo">
+            <a href="http://www.facebook.com/sharer.php?u=https%3A//jorgegarcia.io/saving-the-planet-a-stroll-with-the-boys.html&amp;t=jorgegarcia.io%3A%20Saving%20the%20Planet%3A%20A%20stroll%20with%20the%20boys" target="_blank" class="w3-btn w3-indigo">
               <i class="fa fa-facebook"></i> <span>Facebook</span>
             </a>
-            <a href="http://twitter.com/share?url=/saving-the-planet-a-stroll-with-the-boys.html&amp;text=jorgegarcia.io%3A%20Saving%20the%20Planet%3A%20A%20stroll%20with%20the%20boys" target="_blank" class="w3-btn w3-blue">
+            <a href="http://twitter.com/share?url=https%3A//jorgegarcia.io/saving-the-planet-a-stroll-with-the-boys.html&amp;text=jorgegarcia.io%3A%20Saving%20the%20Planet%3A%20A%20stroll%20with%20the%20boys" target="_blank" class="w3-btn w3-blue">
               <i class="fa fa-twitter"></i> <span>Twitter</span>
             </a>
-            <a href="https://plus.google.com/share?url=/saving-the-planet-a-stroll-with-the-boys.html" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="w3-btn w3-red">
+            <a href="https://plus.google.com/share?url=https%3A//jorgegarcia.io/saving-the-planet-a-stroll-with-the-boys.html" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="w3-btn w3-red">
               <i class="fa fa-google-plus"></i> <span>Google</span>
             </a>
           </div>
