--- a/output/some-of-my-best-friends-are-androids.html
+++ b/output/some-of-my-best-friends-are-androids.html
@@ -19,29 +19,31 @@
     <meta property="og:title" content="Some of my best friends are androids."/>
     <meta property="og:description" content="The inspiration for the piece came whilst listening to MD118 – from the MiniDiscs (Hacked) Demo. When I hear this song, these guys come to mind..."/>
     <meta property="og:site_name" content="jorgegarcia.io" />
-    <meta property="og:url" content="/some-of-my-best-friends-are-androids.html"/>
+    <meta property="og:url" content="https://jorgegarcia.io/some-of-my-best-friends-are-androids.html"/>
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Some of my best friends are androids.">
     <meta name="twitter:description" content="The inspiration for the piece came whilst listening to MD118 – from the MiniDiscs (Hacked) Demo. When I hear this song, these guys come to mind...">
-    <meta name="twitter:url" content="/some-of-my-best-friends-are-androids.html">
+    <meta name="twitter:url" content="https://jorgegarcia.io/some-of-my-best-friends-are-androids.html">
 
     <!-- Feed -->
+    <link rel="alternate" type="application/atom+xml" href="https://jorgegarcia.io/feeds/all.atom.xml" title="jorgegarcia.io Atom Feed" />
+    <link rel="alternate" type="application/atom+xml" href="https://jorgegarcia.io/feeds/{slug}.atom.xml" title="jorgegarcia.io Categories Atom Feed" />
 
     <!-- CSS --> 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:regular,bold">
-    <link rel="stylesheet" type="text/css" href="/theme/css/w3.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/jqcloud.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/pygments-highlight-github.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/w3.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/jqcloud.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/pygments-highlight-github.css">
 
     <!-- Ic0n -->
-    <link rel="shortcut icon" type="image/x-icon" href="/theme/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://jorgegarcia.io/theme/images/favicon.png">
 
     <!-- JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="/theme/js/jqcloud.min.js"></script>
+    <script src="https://jorgegarcia.io/theme/js/jqcloud.min.js"></script>
   </head>
 
   <body>
@@ -50,6 +52,7 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green" style="font-weight: bold;"><a href="https://jorgegarcia.io/category/blog.html">Blog</a></li>
           </ul>
         </nav>
       </header>
@@ -68,10 +71,10 @@
           </div>
           <div>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/thoughts.html" title="All articles with Thoughts tag">#thoughts</a>
+              <a href="https://jorgegarcia.io/tag/thoughts.html" title="All articles with Thoughts tag">#thoughts</a>
             </span>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/visualization.html" title="All articles with Visualization tag">#visualization</a>
+              <a href="https://jorgegarcia.io/tag/visualization.html" title="All articles with Visualization tag">#visualization</a>
             </span>
           </div>
         </div>
@@ -91,16 +94,16 @@ The Hitchhikers’s Guide, my vade mecum. #DontPanic
 OK Computer, the way Yorke releases his stuff excites me, much in the same way Ye edits his stuff.</p>
 <p>The inspiration for the piece came whilst listening to MD118 – from the MiniDiscs (Hacked) Demo. When I hear this song, these guys come to mind.</p>
 <p>I don’t know who I’ve spent money on more rapidly between Yorke, Albarn, or West.</p>
-<p><img alt="AM4 from AM1" src="/images/polygon.jpg">
+<p><img alt="AM4 from AM1" src="https://jorgegarcia.io/images/polygon.jpg">
 <span class="caption">Here’s a Porygon dreaming of a Mareep.
 <span></p>
-<p><img alt="AM4 from AM1" src="/images/marvindrive.jpg">
+<p><img alt="AM4 from AM1" src="https://jorgegarcia.io/images/marvindrive.jpg">
 <span class="caption">Marvin my external-drive
 <span></p>
-<p><img alt="AM4 from AM1" src="/images/ogandroid.png">
+<p><img alt="AM4 from AM1" src="https://jorgegarcia.io/images/ogandroid.png">
 <span class="caption">I’ve come to really love the look of the original vector file.
 <span></p>
-<p><img alt="AM4 from AM1" src="/images/smile_android.png">
+<p><img alt="AM4 from AM1" src="https://jorgegarcia.io/images/smile_android.png">
 <span class="caption">A different take on the vizzy. This is closer to what I would normally share and keep all my interest at bay.
 <span></p>
         </section>
@@ -114,7 +117,7 @@ OK Computer, the way Yorke releases his stuff excites me, much in the same way Y
                 <a href=""><img style="width: 60px; height: 60px;" src="" onerror="this.src='theme/images/avatar.png'" alt="Avatar"></a>
                 <div style="margin-left: 20px; margin-top: 15px;">
                   <a href=""><span id="author-name" class="w3-hover-text-dark-grey">Jorge Garcia</span></a>
-                  <p id="author-story">I'm a maker culture expert from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
+                  <p id="author-story">I'm a maker culture professional and instructional designer from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
                     <span id="intro-description">I make, break, and fix things to learn– teaching and consulting on tech along the way.</p>
                 </div>
               </div>
@@ -125,13 +128,13 @@ OK Computer, the way Yorke releases his stuff excites me, much in the same way Y
 
           <p style="font-size:10pt; font-style: italic;">Did you like this article? Share it with your friends!</p>
           <div id="share" class="share">
-            <a href="http://www.facebook.com/sharer.php?u=/some-of-my-best-friends-are-androids.html&amp;t=jorgegarcia.io%3A%20Some%20of%20my%20best%20friends%20are%20androids." target="_blank" class="w3-btn w3-indigo">
+            <a href="http://www.facebook.com/sharer.php?u=https%3A//jorgegarcia.io/some-of-my-best-friends-are-androids.html&amp;t=jorgegarcia.io%3A%20Some%20of%20my%20best%20friends%20are%20androids." target="_blank" class="w3-btn w3-indigo">
               <i class="fa fa-facebook"></i> <span>Facebook</span>
             </a>
-            <a href="http://twitter.com/share?url=/some-of-my-best-friends-are-androids.html&amp;text=jorgegarcia.io%3A%20Some%20of%20my%20best%20friends%20are%20androids." target="_blank" class="w3-btn w3-blue">
+            <a href="http://twitter.com/share?url=https%3A//jorgegarcia.io/some-of-my-best-friends-are-androids.html&amp;text=jorgegarcia.io%3A%20Some%20of%20my%20best%20friends%20are%20androids." target="_blank" class="w3-btn w3-blue">
               <i class="fa fa-twitter"></i> <span>Twitter</span>
             </a>
-            <a href="https://plus.google.com/share?url=/some-of-my-best-friends-are-androids.html" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="w3-btn w3-red">
+            <a href="https://plus.google.com/share?url=https%3A//jorgegarcia.io/some-of-my-best-friends-are-androids.html" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="w3-btn w3-red">
               <i class="fa fa-google-plus"></i> <span>Google</span>
             </a>
           </div>
