--- a/output/twenty17-q2-updates.html
+++ b/output/twenty17-q2-updates.html
@@ -19,29 +19,31 @@
     <meta property="og:title" content="Twenty17 Q2 Updates"/>
     <meta property="og:description" content="Spring of 2017 is an exciting time for me. I am back at HWLC’s YOUmedia but this time as a Lead Mentor with a focus on Make Culture and Computer Science. That means I’ll be working to facilitate CS learning in YOUmedia as well as introducing and maintaining maker related equipment. Alongside that, I will continue working at the Maker Lab as the senior Maker Specialist II. I am glad to be back in one building and looking forward to the programming that I will be doing with both departments..."/>
     <meta property="og:site_name" content="jorgegarcia.io" />
-    <meta property="og:url" content="/twenty17-q2-updates.html"/>
+    <meta property="og:url" content="https://jorgegarcia.io/twenty17-q2-updates.html"/>
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Twenty17 Q2 Updates">
     <meta name="twitter:description" content="Spring of 2017 is an exciting time for me. I am back at HWLC’s YOUmedia but this time as a Lead Mentor with a focus on Make Culture and Computer Science. That means I’ll be working to facilitate CS learning in YOUmedia as well as introducing and maintaining maker related equipment. Alongside that, I will continue working at the Maker Lab as the senior Maker Specialist II. I am glad to be back in one building and looking forward to the programming that I will be doing with both departments...">
-    <meta name="twitter:url" content="/twenty17-q2-updates.html">
+    <meta name="twitter:url" content="https://jorgegarcia.io/twenty17-q2-updates.html">
 
     <!-- Feed -->
+    <link rel="alternate" type="application/atom+xml" href="https://jorgegarcia.io/feeds/all.atom.xml" title="jorgegarcia.io Atom Feed" />
+    <link rel="alternate" type="application/atom+xml" href="https://jorgegarcia.io/feeds/{slug}.atom.xml" title="jorgegarcia.io Categories Atom Feed" />
 
     <!-- CSS --> 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:regular,bold">
-    <link rel="stylesheet" type="text/css" href="/theme/css/w3.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/jqcloud.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/pygments-highlight-github.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/w3.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/jqcloud.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/pygments-highlight-github.css">
 
     <!-- Ic0n -->
-    <link rel="shortcut icon" type="image/x-icon" href="/theme/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://jorgegarcia.io/theme/images/favicon.png">
 
     <!-- JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="/theme/js/jqcloud.min.js"></script>
+    <script src="https://jorgegarcia.io/theme/js/jqcloud.min.js"></script>
   </head>
 
   <body>
@@ -50,6 +52,7 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green" style="font-weight: bold;"><a href="https://jorgegarcia.io/category/blog.html">Blog</a></li>
           </ul>
         </nav>
       </header>
@@ -68,10 +71,10 @@
           </div>
           <div>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/worklife.html" title="All articles with Worklife tag">#worklife</a>
+              <a href="https://jorgegarcia.io/tag/worklife.html" title="All articles with Worklife tag">#worklife</a>
             </span>
             <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
-              <a href="/tag/computers.html" title="All articles with Computers tag">#computers</a>
+              <a href="https://jorgegarcia.io/tag/computers.html" title="All articles with Computers tag">#computers</a>
             </span>
           </div>
         </div>
@@ -102,7 +105,7 @@
                 <a href=""><img style="width: 60px; height: 60px;" src="" onerror="this.src='theme/images/avatar.png'" alt="Avatar"></a>
                 <div style="margin-left: 20px; margin-top: 15px;">
                   <a href=""><span id="author-name" class="w3-hover-text-dark-grey">Jorge Garcia</span></a>
-                  <p id="author-story">I'm a maker culture expert from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
+                  <p id="author-story">I'm a maker culture professional and instructional designer from <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
                     <span id="intro-description">I make, break, and fix things to learn– teaching and consulting on tech along the way.</p>
                 </div>
               </div>
@@ -113,13 +116,13 @@
 
           <p style="font-size:10pt; font-style: italic;">Did you like this article? Share it with your friends!</p>
           <div id="share" class="share">
-            <a href="http://www.facebook.com/sharer.php?u=/twenty17-q2-updates.html&amp;t=jorgegarcia.io%3A%20Twenty17%20Q2%20Updates" target="_blank" class="w3-btn w3-indigo">
+            <a href="http://www.facebook.com/sharer.php?u=https%3A//jorgegarcia.io/twenty17-q2-updates.html&amp;t=jorgegarcia.io%3A%20Twenty17%20Q2%20Updates" target="_blank" class="w3-btn w3-indigo">
               <i class="fa fa-facebook"></i> <span>Facebook</span>
             </a>
-            <a href="http://twitter.com/share?url=/twenty17-q2-updates.html&amp;text=jorgegarcia.io%3A%20Twenty17%20Q2%20Updates" target="_blank" class="w3-btn w3-blue">
+            <a href="http://twitter.com/share?url=https%3A//jorgegarcia.io/twenty17-q2-updates.html&amp;text=jorgegarcia.io%3A%20Twenty17%20Q2%20Updates" target="_blank" class="w3-btn w3-blue">
               <i class="fa fa-twitter"></i> <span>Twitter</span>
             </a>
-            <a href="https://plus.google.com/share?url=/twenty17-q2-updates.html" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="w3-btn w3-red">
+            <a href="https://plus.google.com/share?url=https%3A//jorgegarcia.io/twenty17-q2-updates.html" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="w3-btn w3-red">
               <i class="fa fa-google-plus"></i> <span>Google</span>
             </a>
           </div>
