--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -15,31 +15,32 @@
     <meta property="og:title" content="About"/>
     <meta property="og:description" content=""/>
     <meta property="og:site_name" content="jorgegarcia.io" />
-    <meta property="og:url" content="/pages/about.html"/>
+    <meta property="og:url" content="https://jorgegarcia.io/pages/about.html"/>
     <meta property="og:image" content=""/>
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="About">
     <meta name="twitter:description" content="">
-    <meta name="twitter:url" content="/pages/about.html">
+    <meta name="twitter:url" content="https://jorgegarcia.io/pages/about.html">
     <meta name="twitter:image" content="">
 
     <!-- Feed -->
+    <link rel="alternate" type="application/atom+xml" href="https://jorgegarcia.io/feeds/all.atom.xml" title="jorgegarcia.io Atom Feed" />
 
     <!-- CSS --> 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:regular,bold">
-    <link rel="stylesheet" type="text/css" href="/theme/css/w3.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/jqcloud.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/pygments-highlight-github.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/w3.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/jqcloud.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="https://jorgegarcia.io/theme/css/pygments-highlight-github.css">
 
     <!-- Ic0n -->
-    <link rel="shortcut icon" type="image/x-icon" href="/theme/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://jorgegarcia.io/theme/images/favicon.png">
 
     <!-- JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="/theme/js/jqcloud.min.js"></script>
+    <script src="https://jorgegarcia.io/theme/js/jqcloud.min.js"></script>
   </head>
 
   <body>
@@ -48,6 +49,7 @@
         <a href="https://jorgegarcia.io\" id="header-logo" title="Home">JG</a>
         <nav id="header-menu">
           <ul>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green" ><a href="https://jorgegarcia.io/category/blog.html">Blog</a></li>
           </ul>
         </nav>
       </header>
